update error page